<resources>
    <string name="app_name">Boku no Hero Service</string>
    <string name="app_name_short">my.hero</string>
    <string name="preference_file_key">my.hero.default_private_preferences_file</string>

    <!--    Common strings -->
    <string name="alert_dialog_error_confirm_text">OK</string>
    <string name="alert_dialog_error_title">Ошибка</string>
    <string name="alert_dialog_confirm_title">Подтверждение</string>
    <string name="alert_dialog_confirm_text">Да</string>
    <string name="alert_dialog_cancel_text">Нет</string>

    <!--    Shared preferences keys  -->
...
    <!--    Home screen strings -->
    <string name="home_screen_top_bar_title">Мой герой</string>
    <string name="home_screen_logout_dialog_text">Вы действительно хотите выйти из учётной записи?</string>
    <string name="btn_sos_text">SOS</string>

    <!--    New ticket screen strings -->
    <string name="new_ticket_screen_top_bar_title">Заявка на оказание помощи</string>
    <string name="new_ticket_screen_btn_create_ticket">Создать</string>
    <string name="new_ticket_screen_message_ticket_created">Заявка успешно создана.</string>

    <!--    Tickets screen strings -->
    <string name="tickets_screen_top_bar_title">Все заявки</string>

...
