...
            val apiResponse = api.saveTicket(ticket.id, ticket)
            if (apiResponse.isSuccessful) {
                if (apiResponse.body() != null) {
                    emit(
                        NetworkCallState.success(
                            apiResponse.body(),
                            "Заявка сохранена."
                        )
                    )
                } else {
                    emit(NetworkCallState.error("Не удалось сохранить заявку. Код ${apiResponse.code()}."))
                }
            } else {
...
